[package]
name = "hyper-server"
version = "0.1.0"
edition = "2021"


[dependencies]
bytes = "1"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
serde_json = "1.0"
pretty_env_logger = "0.4"
serde = { version = "1.0.152", features = ["derive"] }

